--- a/Tamagotchi.9052/Tamagotchi.DataAccess/Tamagotchi.DataAccess.csproj
+++ b/Tamagotchi.9052/Tamagotchi.DataAccess/Tamagotchi.DataAccess.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{84519763-1A73-4127-8C37-0B03904DB706}</ProjectGuid>
+    <ProjectGuid>{B6955FBD-AF07-453B-93E6-C7AD3E293442}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tamagotchi.Common</RootNamespace>
-    <AssemblyName>Tamagotchi.Common</AssemblyName>
+    <RootNamespace>Tamagotchi.DataAccess</RootNamespace>
+    <AssemblyName>Tamagotchi.DataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net40\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net40\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,29 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Animal.cs" />
-    <Compile Include="Entities\BaseEntity.cs" />
-    <Compile Include="Entities\Log.cs" />
-    <Compile Include="Entities\Login.cs" />
-    <Compile Include="Entities\Pet.cs" />
-    <Compile Include="Entities\Session.cs" />
-    <Compile Include="Entities\User.cs" />
-    <Compile Include="Enums\Gender.cs" />
-    <Compile Include="Messages\LoginMessageRequest.cs" />
-    <Compile Include="Messages\LoginMessageResponse.cs" />
-    <Compile Include="Messages\MessageRequest.cs" />
-    <Compile Include="Messages\MessageResponse.cs" />
-    <Compile Include="Models\AnimalModel.cs" />
-    <Compile Include="Models\BaseModel.cs" />
-    <Compile Include="Models\LogModel.cs" />
-    <Compile Include="Models\LoginModel.cs" />
-    <Compile Include="Models\PetModel.cs" />
-    <Compile Include="Models\SessionModel.cs" />
-    <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Context\TamagotchiContext.cs" />
+    <Compile Include="DALs\Interfaces\IAnimalDAL.cs" />
+    <Compile Include="DALs\Interfaces\IBaseDAL.cs" />
+    <Compile Include="DALs\Interfaces\ILogDAL.cs" />
+    <Compile Include="DALs\Interfaces\IPetDAL.cs" />
+    <Compile Include="DALs\Interfaces\ISessionDAL.cs" />
+    <Compile Include="DALs\Interfaces\IUserDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Content Include="Exceptions\TODO.txt" />
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
