--- a/Code/Tamagotchi.Common/App.config
+++ b/Code/Tamagotchi.Common/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings>
+    <add name="Tamagotchi9052ConnString"
+    connectionString="Data Source=.;Initial Catalog=TamagotchiDB-ByConnectionString;Integrated Security=true"
+    providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
