Almost done DAL

--- a/Code/Tamagotchi.Common/App.config
+++ b/Code/Tamagotchi.Common/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="Tamagotchi9052ConnString"
-    connectionString="Data Source=.;Initial Catalog=TamagotchiDB-ByConnectionString;Integrated Security=true"
+    connectionString="Data Source=.\EXPRESS;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true"
     providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <configSections>
