UI.Mobile.Android

--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/AndroidManifest.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".PetActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PetActivity"
+            android:name=".LoginActivity"
             android:label="@string/title_activity_pet"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
