--- a/Code/Tamagotchi.DALTesting/App.config
+++ b/Code/Tamagotchi.DALTesting/App.config
@@ -16,8 +16,30 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="Tamagotchi9052ConnString"
-    connectionString="Data Source=.\EXPRESS;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true"
-    providerName="System.Data.SqlClient"/>
+    <add name="Tamagotchi9052ConnString" connectionString="Data Source=.\EXPRESS;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Interactive.Async" publicKeyToken="94bc3704cddfc263" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.32.0.0" newVersion="1.32.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis.Auth" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.30.0.0" newVersion="1.30.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis.Auth.PlatformServices" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.30.0.0" newVersion="1.30.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
