Add AnimalBusiness; Business created but not Implemented

--- a/Code/Tamagotchi.Business/Tamagotchi.Business.csproj
+++ b/Code/Tamagotchi.Business/Tamagotchi.Business.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnimalBusiness.cs" />
     <Compile Include="BaseBusiness.cs" />
     <Compile Include="Interfaces\IBaseBusiness.cs" />
     <Compile Include="Interfaces\IAnimalBusiness.cs" />
