--- a/Code/Tamagotchi.Core/Tamagotchi.Core.csproj
+++ b/Code/Tamagotchi.Core/Tamagotchi.Core.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseGameRules.cs" />
+    <Compile Include="GameStatus.cs" />
+    <Compile Include="IBaseGameRules.cs" />
+    <Compile Include="PetStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
