--- a/Code/Tamagotchi.Business/Tamagotchi.Business.csproj
+++ b/Code/Tamagotchi.Business/Tamagotchi.Business.csproj
@@ -61,6 +61,9 @@
     <Compile Include="LoginBusiness.cs" />
     <Compile Include="PetBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\AssemblyExecuterService.cs" />
+    <Compile Include="Service\AssemblyLoaderService.cs" />
+    <Compile Include="Service\CloudService.cs" />
     <Compile Include="SessionBusiness.cs" />
     <Compile Include="UserBusiness.cs" />
   </ItemGroup>
