--- a/Code/Tamagotchi.Business/Tamagotchi.Business.csproj
+++ b/Code/Tamagotchi.Business/Tamagotchi.Business.csproj
@@ -46,9 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnimalBusiness.cs" />
-    <Compile Include="BaseBusiness.cs" />
-    <Compile Include="BaseMongoBusiness.cs" />
+    <Compile Include="Business\AnimalBusiness.cs" />
+    <Compile Include="Business\BaseBusiness.cs" />
+    <Compile Include="Business\BaseMongoBusiness.cs" />
     <Compile Include="Interfaces\IBaseBusiness.cs" />
     <Compile Include="Interfaces\IAnimalBusiness.cs" />
     <Compile Include="Interfaces\IBaseMongoBusiness.cs" />
@@ -57,20 +57,24 @@
     <Compile Include="Interfaces\IPetBusiness.cs" />
     <Compile Include="Interfaces\ISessionBusiness.cs" />
     <Compile Include="Interfaces\IUserBusiness.cs" />
-    <Compile Include="LogBusiness.cs" />
-    <Compile Include="LoginBusiness.cs" />
-    <Compile Include="PetBusiness.cs" />
+    <Compile Include="Business\LogBusiness.cs" />
+    <Compile Include="Business\LoginBusiness.cs" />
+    <Compile Include="Business\PetBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\AssemblyExecuterService.cs" />
-    <Compile Include="Service\AssemblyLoaderService.cs" />
-    <Compile Include="Service\CloudService.cs" />
-    <Compile Include="SessionBusiness.cs" />
-    <Compile Include="UserBusiness.cs" />
+    <Compile Include="Services\AssemblyExecuterService.cs" />
+    <Compile Include="Services\AssemblyLoaderService.cs" />
+    <Compile Include="Services\CloudService.cs" />
+    <Compile Include="Business\SessionBusiness.cs" />
+    <Compile Include="Business\UserBusiness.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tamagotchi.Common\Tamagotchi.Common.csproj">
       <Project>{84519763-1a73-4127-8c37-0b03904db706}</Project>
       <Name>Tamagotchi.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tamagotchi.Core\Tamagotchi.Core.csproj">
+      <Project>{b45dcd53-4ebf-4b82-94ed-c2fe0da04a0b}</Project>
+      <Name>Tamagotchi.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\Tamagotchi.DataAccess\Tamagotchi.DataAccess.csproj">
       <Project>{b6955fbd-af07-453b-93e6-c7ad3e293442}</Project>
