--- a/Code/Tamagotchi.Business/packages.config
+++ b/Code/Tamagotchi.Business/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.0" targetFramework="net461" />
+  <package id="ICSharpCode.SharpZipLib.dll" version="0.85.4.369" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="9.2.0" targetFramework="net461" />
 </packages>
