--- a/Code/Tamagotchi.Presentation/Client.Desktop/pom.xml
+++ b/Code/Tamagotchi.Presentation/Client.Desktop/pom.xml
@@ -10,6 +10,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>de.saxsys</groupId>
             <artifactId>mvvmfx</artifactId>
             <version>1.7.0</version>
