services, mockups, reorder

--- a/Code/Tamagotchi.Presentation/Client.Website/.gitignore
+++ b/Code/Tamagotchi.Presentation/Client.Website/.gitignore
@@ -1,4 +1,13 @@
 
+# Created by https://www.gitignore.io/api/firebase
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+# End of https://www.gitignore.io/api/firebase
+
 # Created by https://www.gitignore.io/api/angular
 
 ### Angular ###
