--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/.gitignore
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/.gitignore
@@ -1,3 +1,13 @@
+
+# Created by https://www.gitignore.io/api/firebase
+
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+# End of https://www.gitignore.io/api/firebase
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
