--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/build.gradle
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
