--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/AndroidManifest.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_logo_tamagotchi_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".EntryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
