--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/AndroidManifest.xml
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.outlook.octavio.armenta.tamagotchi9052">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,14 +11,15 @@
         android:roundIcon="@mipmap/ic_logo_tamagotchi_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.EntryActivity">
+        <activity android:name="com.outlook.octavio.armenta.tamagotchi9052.views.activities.EntryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity" />
+        <activity android:name="com.outlook.octavio.armenta.tamagotchi9052.views.activities.MainActivity" />
+        <activity android:name="com.outlook.octavio.armenta.tamagotchi9052.views.activities.StoreActivity"></activity>
     </application>
 
 </manifest>
