--- a/Code/Tamagotchi.Rest/packages.config
+++ b/Code/Tamagotchi.Rest/packages.config
@@ -26,9 +26,13 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Ninject" version="3.3.3" targetFramework="net461" />
+  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
+  <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="Unity.Abstractions" version="3.3.0" targetFramework="net461" />
   <package id="Unity.AspNet.WebApi" version="5.0.13" targetFramework="net461" />
+  <package id="Unity.Configuration" version="5.2.3" targetFramework="net461" />
   <package id="Unity.Container" version="5.7.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
