--- a/Code/Tamagotchi.Testing/App.config
+++ b/Code/Tamagotchi.Testing/App.config
@@ -16,7 +16,7 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="Tamagotchi9052ConnString" connectionString="Data Source=.\EXPRESS;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true" providerName="System.Data.SqlClient" />
+    <add name="Tamagotchi9052ConnString" connectionString="Data Source=.;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
