--- a/Code/Tamagotchi.SOAP/Web.config
+++ b/Code/Tamagotchi.SOAP/Web.config
@@ -51,6 +51,6 @@
     </providers>
   </entityFramework>
     <connectionStrings>
-    <add name="Tamagotchi9052ConnString" connectionString="Data Source=.\EXPRESS;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true" providerName="System.Data.SqlClient" />
+    <add name="Tamagotchi9052ConnString" connectionString="Data Source=.;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
