creat user works

--- a/Code/Tamagotchi.SOAP/Web.config
+++ b/Code/Tamagotchi.SOAP/Web.config
@@ -55,5 +55,7 @@
     </entityFramework>
     <connectionStrings>
     <add name="Tamagotchi9052ConnString" connectionString="Data Source=.;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true" providerName="System.Data.SqlClient" />
+      <add name="Tamagotchi9052MongoDBConnString"
+           connectionString="mongodb://138.197.135.141:27017"/>
   </connectionStrings>
 </configuration>
