--- a/Code/Tamagotchi.Rest/Tamagotchi.Rest.csproj
+++ b/Code/Tamagotchi.Rest/Tamagotchi.Rest.csproj
@@ -191,6 +191,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PetController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
