Minor changes, base

--- a/Code/Tamagotchi.Rest/Tamagotchi.Rest.csproj
+++ b/Code/Tamagotchi.Rest/Tamagotchi.Rest.csproj
@@ -189,6 +189,7 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityWebApiActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PetController.cs" />
     <Compile Include="Controllers\UserController.cs" />
