--- a/Code/Tamagotchi.Common/App.config
+++ b/Code/Tamagotchi.Common/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="Tamagotchi9052ConnString"
-    connectionString="Data Source=.\EXPRESS;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true"
+    <add name="TamagotchiRelational"
+    connectionString="Data Source=.\EXPRESS;Initial Catalog=TamagotchiRelational;Integrated Security=true"
     providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <configSections>
