--- a/Code/Tamagotchi.DataAccess/App.config
+++ b/Code/Tamagotchi.DataAccess/App.config
@@ -2,7 +2,7 @@
 <configuration>
 
   <connectionStrings>
-    <add name="Tamagotchi9052ConnString" connectionString="Data Source=.\EXPRESS;Initial Catalog=Tamagotchi9052ConnString;Integrated Security=true" providerName="System.Data.SqlClient" />
+    <add name="TamagotchiRelational" connectionString="Data Source=.\EXPRESS;Initial Catalog=TamagotchiRelational;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <configSections>
