--- a/Code/Tamagotchi.SOAP/Tamagotchi.SOAP.csproj
+++ b/Code/Tamagotchi.SOAP/Tamagotchi.SOAP.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\soap9052 - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
