--- a/Code/Tamagotchi.DataAccess/Tamagotchi.DataAccess.csproj
+++ b/Code/Tamagotchi.DataAccess/Tamagotchi.DataAccess.csproj
@@ -96,6 +96,15 @@
     <Compile Include="DataModels\Pet.cs" />
     <Compile Include="DataModels\Session.cs" />
     <Compile Include="DataModels\User.cs" />
+    <Compile Include="Migrations\201806140435106_InitialCreate.cs" />
+    <Compile Include="Migrations\201806140435106_InitialCreate.Designer.cs">
+      <DependentUpon>201806140435106_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806141745221_InitialCreate1.cs" />
+    <Compile Include="Migrations\201806141745221_InitialCreate1.Designer.cs">
+      <DependentUpon>201806141745221_InitialCreate1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -107,6 +116,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201806140435106_InitialCreate.resx">
+      <DependentUpon>201806140435106_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806141745221_InitialCreate1.resx">
+      <DependentUpon>201806141745221_InitialCreate1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
