--- a/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/package.json
+++ b/Code/Tamagotchi.Presentation/Client.Website/tamagotchi-web-angular/package.json
@@ -25,6 +25,7 @@
     "@swimlane/ngx-charts": "^8.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-soap": "^0.2.2-beta6",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
